# kokoro-tts-mcp

./: .env.example  .gitignore  README.md  example.txt  kokoro_service.py  mcp-tts.py  mcp_client.py  pyproject.toml  requirements.txt  start_mcp_server.sh
